# cpp-projects

./: .gitignore  README.md  privateAccess.cpp
AutoExecEditor/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
AutoExecEditor/cmake/: build_info.h.in
AutoExecEditor/imgui/: CMakeLists.txt
AutoExecEditor/include/: apps.h
AutoExecEditor/src/: apps.cpp  main.cpp
BoostTest/: .gitignore  CMakeLists.txt
BoostTest/src/: main.cpp
CArena/: README.md  makefile
CArena/src/: arena.c  arena.h  main.c
CMakeTest/: .clangd  .gitignore  CMakeLists.txt  README.md
CMakeTest/include/: Bob.h
CMakeTest/src/: Bob.cpp  main.cpp
CParser/: .clangd  .gitignore  main.c  makefile  parser.c  parser.h  test.txt  tl_ds.h  tl_log.h
CParser/include/tinylib/: logging.h  macros.h  tl_ds.h
CParser/test/: array.c
CoroutineTest/: .gitignore  CMakeLists.txt  README.md
CoroutineTest/src/: main.cpp
LearnWGPU/: .clangd  CMakeLists.txt  CMakePresets.json  README.md
LearnWGPU/dawn/Darwin/include/dawn/: webgpu_cpp_print.h
LearnWGPU/dawn/Darwin/lib/cmake/Dawn/: DawnTargets-relwithdebinfo.cmake
LearnWGPU/dawn/Windows/include/dawn/: dawn_proc_table.h  webgpu_cpp.h
LearnWGPU/dawn/Windows/include/dawn/wire/client/: webgpu_cpp.h
LearnWGPU/src/triangle/: CMakeLists.txt  main.cpp
LuaVM/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
LuaVM/dependencies/: lua
LuaVM/dependencies/lua-5.3.6/: CMakeLists.txt
LuaVM/docs/: GPT.md
LuaVM/scripts/: test.lua
LuaVM/source/luasrc/: CMakeLists.txt
LuaVM/source/luavm/: CMakeLists.txt  lua_vm.c  lua_vm.h  main.c
LuaVM/source/tensor_edit/: CMakeLists.txt
LuaVM/source/tools/: lua_debug.h
SPC/: .gitignore  README.md
SPC/win32_simple_messages/c/: main.c
WEBGPU/: .gitignore
WEBGPU/CoolAnims/: CMakeLists.txt
WEBGPU/CoolAnims/src/: main.cpp
WEBGPU/DawnDemo/: .clangd  CMakeLists.txt
WEBGPU/DawnDemo/dawn/Darwin/include/dawn/wire/client/: webgpu.h
WEBGPU/DawnDemo/dawn/Darwin/lib/cmake/Dawn/: DawnTargets.cmake
WEBGPU/DawnDemo/dawn/Windows/include/dawn/: webgpu.h
WEBGPU/DawnDemo/dawn/Windows/lib/: webgpu_dawn.lib
WEBGPU/DawnDemo/dawn/Windows/lib/cmake/Dawn/: DawnTargets-relwithdebinfo.cmake
WEBGPU/DawnDemo/src/triangle/: CMakeLists.txt  main.cpp
WEBGPU/SimpleDemo/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
WEBGPU/SimpleDemo/src/: main.cpp
WEBGPU/cmake/: helpers.cmake  webgpu_glfw_backend.cmake
inklisp/: .clangd  .gitignore  Makefile  README.md  a.test  lib.c  main.c
inklisp/test/: test_mpc.c
nuklear_demo/: .clang-format  .gitignore  compile_commands.json  xmake.lua
nuklear_demo/src/: main.cpp  nuklear.cpp  nuklear_config.cpp  nuklear_config.h  overview.h
proto_bridge/: .clangd  .gitignore  test.proto  xmake.lua
proto_bridge/proto/: test.pb.cc  test.pb.h
proto_bridge/proto_bridge/: proto_bridge.h
proto_bridge/src/: main.cpp  shape.h
read_files/: .gitignore  xmake.lua
read_files/assets/: generate_test_file.sh
read_files/src/: fstream.h  main.cpp  mmap.h
strategy_pattern/: .gitignore
strategy_pattern/python/: README.md  base.py  example_rules.py  main.py  pyproject.toml
wasm_scene/: .gitignore  README.md
wasm_scene/c/: .clangd  build  build.c  makefile
wasm_scene/c/include/tinylib/: c_ext.h  compile.c  compile.h  data_struct.h  defs.h  error.h  logging.c  logging.h  mem.h  strview.h  tinylib.c  tinylib.h
wasm_scene/c/shaders/: clear.wgsl
wasm_scene/c/src/: main.c
wasm_scene/c3/: Makefile  project.json
wasm_scene/c3/lib/sokol.c3l/: manifest.json  sapp.c3  saudio.c3  sdtx.c3  sg.c3  sgl.c3
wasm_scene/c3/scripts/: copy_assets.sh
wasm_scene/c3/src/: main.c3
